--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
     {% endblock %}
 </head>
 <body class="bg-black font-montserrat text-white text-opacity-50 flex flex-col relative min-h-screen pb-28 overflow-x-hidden">
-    <div id="overlay" class="fixed z-10 bg-black opacity-0 h-screen w-screen pointer-events-none transition-opacity ease-out duration-500 cursor-pointer"></div>
+    <div id="overlay" class="fixed z-10 bg-black opacity-0 h-screen w-screen pointer-events-none ease-out duration-500 cursor-pointer"></div>
 
     {% block header %}
         {% include 'shared/header.html.twig' %}
