--- a/templates/shared/header.html.twig
+++ b/templates/shared/header.html.twig
@@ -5,15 +5,10 @@
 
     <a href="javascript:void(0)" id="sidebar-open" class="absolute top-5 right-4 md:top-12 md:right-12"><i data-feather="menu" class="md:h-8 md:w-8"></i></a>
 
-    <div id="sidebar" class="w-96 z-20 h-screen fixed ease-in-out duration-500 bg-zinc-900 top-0 -right-96">
-        <a href="javascript:void(0)" id="sidebar-close" class="absolute top-0 -left-40 uppercase pointer-events-none opacity-0 -rotate-90 origin-bottom-right
-            ease-in-out duration-500 hover:text-white"
-        >x close sidebar</a>
-        <nav class="p-10">
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
-        </nav>
+    <div id="sidebar" class="w-5/6 h-full fixed top-0 -right-5/6 md:-right-96 z-20 bg-zinc-900 max-w-sm ease-in-out duration-500 z-20">
+        <a href="javascript:void(0)" id="sidebar-close"
+           class="absolute w-max block uppercase origin-bottom-right -left-40 -rotate-90 text-right ease-in-out duration-500 opacity-0 pointer-events-none  hover:text-white">
+            x close sidebar
+        </a>
     </div>
 </header>
