--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,9 +19,8 @@
         <script src="{{ asset('feather.min.js') }}"></script>
     {% endblock %}
 </head>
-<body class="bg-black font-montserrat text-white text-opacity-50 flex flex-col relative min-h-screen pb-28 overflow-x-hidden">
+<body id="body" class="bg-black font-montserrat text-white text-opacity-50 flex flex-col relative min-h-screen pb-28 overflow-x-hidden overflow-y-auto">
     <div id="overlay" class="fixed z-10 bg-black opacity-0 h-screen w-screen pointer-events-none ease-out duration-500 cursor-pointer"></div>
-
     {% block header %}
         {% include 'shared/header.html.twig' %}
     {% endblock %}
