Added back to top button

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,9 @@
         {% include 'shared/footer.html.twig' %}
     {% endblock %}
 
+    <button id="up" class="fixed bottom-8 right-8 h-12 w-12 rounded flex justify-center items-center border-2 border-neutral-500 text-neutral-500 group bg-[#1E293B] mix-blend-difference">
+        <i class="group-hover:animate-bounce mix-blend-exclusion" data-feather="chevrons-up"></i>
+    </button>
     <script>
         feather.replace()
     </script>
