--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,5 +21,10 @@
         {% include 'shared/masonry.html.twig' with {
             'images': images
         } only %}
+
+        <button id="up" class="fixed bottom-10 -right-24 h-12 w-24 shadow-md shadow-black rounded-l flex justify-start items-center
+                        border-2 border-r-0 border-[#808080] group bg-black z-30 ease-out duration-500">
+            <i class="group-hover:animate-bounce mx-4" data-feather="chevron-up"></i>
+        </button>
     </main>
 {% endblock %}
