Added about me to sidebar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,8 @@
         {% include 'shared/header.html.twig' %}
     {% endblock %}
 
+    {% include 'shared/sidebar.html.twig' %}
+
     {% block body %}{% endblock %}
 
     {% block footer %}
