--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,9 +18,14 @@
             'tags': tags
         } only %}
 
-        {% include 'shared/masonry.html.twig' with {
-            'images': images
-        } only %}
+        <section class="px-5 mt-16 grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-8">
+            {# TODO: Make auto loading/infinite scroll to save data #}
+            {% for image in images %}
+                <div class="rounded shadow-md shadow-black {% if image.large %}md:col-span-2 md:row-span-2{% endif %}">
+                    <img src="{{ image.url }}" class="w-full h-full rounded" alt="">
+                </div>
+            {% endfor %}
+        </section>
 
         {# Restore scroll position #}
         <button id="down" class="fixed top-32 -right-24 h-12 w-24 shadow-md shadow-black rounded-l flex justify-start items-center
