Moved tags template

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
     } only %}
 
     <main class="my-8 md:mt-0">
-        {% include 'shared/tags.html.twig' with {
+        {% include 'home/tags.html.twig' with {
             'tags': tags
         } only %}
 
