Added routes to sidebar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
         <script src="{{ asset('feather.min.js') }}"></script>
     {% endblock %}
 </head>
-<body id="body" class="bg-black font-montserrat text-white text-opacity-50 flex flex-col relative min-h-screen pb-28 overflow-x-hidden overflow-y-auto
+<body id="body" class="bg-black font-montserrat text-neutral-400 flex flex-col relative min-h-screen pb-28 overflow-y-auto
                 before:fixed before:left-0 before:top-0 before:w-screen before:h-screen before:-z-10 before:content-['']">
     <div id="overlay" class="fixed z-10 bg-black opacity-0 h-screen w-screen pointer-events-none ease-out duration-500 transition-opacity cursor-pointer"></div>
     {% block header %}
