--- a/templates/shared/sidebar.html.twig
+++ b/templates/shared/sidebar.html.twig
@@ -1,13 +1,13 @@
-<div id="sidebar" class="w-5/6 h-full fixed top-0 -right-5/6 md:-right-96 z-20 bg-zinc-900 max-w-sm ease-in-out duration-500 z-20 p-5">
+<aside id="sidebar" class="w-5/6 h-full fixed top-0 -right-5/6 z-20 bg-zinc-900 max-w-sm ease-in-out duration-500 z-20 p-5 md:-right-96 ">
     <a href="javascript:void(0)" id="sidebar-close"
        class="absolute w-max block uppercase origin-bottom-right top-0 -left-40 -rotate-90 text-right ease-in-out duration-500 opacity-0 pointer-events-none hover:text-white">
         x close sidebar
     </a>
 
-    <section>
+    <section class="pt-5 pl-5 pr-0 pb-8">
         <div class="flex flex-row items-center mb-5">
             <img src="{{ asset('avatar/avatar.png') }}" alt="avatar" class="w-36 h-36 rounded-full bg-[#a0a0a0]">
-            <h3 class="absolute right-5 w-72 text-3xl mb-5 uppercase flex flex-col text-right mix-blend-difference">
+            <h3 class="absolute right-5 w-60 md:w-72 text-3xl mb-5 uppercase flex flex-col text-right mix-blend-difference">
                 <span class="text-sm">Lorem Ipsum</span>
                 <span class="text-white font-bold">Lorem Ipsilus</span>
             </h3>
@@ -16,4 +16,14 @@
             {{ lipsum() }}
         </div>
     </section>
-</div>
+    <nav class="flex flex-col gap-2 text-right">
+        <a href="{{ path('app_home') }}" class="flex items-center h-12 hover:bg-zinc-800 px-4 rounded-lg">
+            <span class="w-full">See my works</span>
+            <span class="pl-4"><i data-feather="chevron-right"></i></span>
+        </a>
+        <a href="{{ path('app_contact') }}" class="flex items-center h-12 hover:bg-zinc-800 px-4 rounded-lg">
+            <span class="w-full">Get in touch</span>
+            <span class="pl-4"><i data-feather="chevron-right"></i></span>
+        </a>
+    </nav>
+</aside>
