Fixed name going out of bounds on sidebar

--- a/templates/shared/sidebar.html.twig
+++ b/templates/shared/sidebar.html.twig
@@ -7,9 +7,9 @@
     <section class="pt-5 pl-5 pr-0 pb-8">
         <div class="flex flex-row items-center mb-5">
             <img src="{{ asset('avatar/avatar.png') }}" alt="avatar" class="w-36 h-36 rounded-full bg-[#a0a0a0]">
-            <h3 class="absolute right-5 w-60 md:w-72 text-3xl mb-5 uppercase flex flex-col text-right mix-blend-difference">
-                <span class="text-sm">Lorem Ipsum</span>
-                <span class="text-white font-bold">Lorem Ipsilus</span>
+            <h3 class="absolute right-5 w-56 md:w-72 text-3xl mb-5 uppercase flex flex-col text-right mix-blend-difference">
+                <span class="text-sm">Artist</span>
+                <span class="text-white font-bold">Kytana Weiss</span>
             </h3>
         </div>
     </section>
