--- a/templates/shared/footer.html.twig
+++ b/templates/shared/footer.html.twig
@@ -1,10 +1,10 @@
 <footer class="mt-4 mb-8 px-4 flex flex-col text-center w-full h-20 absolute bottom-0
         md:flex-row md:mb-0 md:justify-between">
     <div class="flex flex-row justify-center mb-8">
-        <a href="#" class="hover:text-white mx-5"><i data-feather="facebook"></i></a>
-        <a href="#" class="hover:text-white mx-5"><i data-feather="twitter"></i></a>
-        <a href="#" class="hover:text-white mx-5"><i data-feather="instagram"></i></a>
-        <a href="#" class="hover:text-white mx-5"><i data-feather="youtube"></i></a>
+        <a href="#" class="hover:text-white mx-5 h-min"><i data-feather="facebook"></i></a>
+        <a href="#" class="hover:text-white mx-5 h-min"><i data-feather="twitter"></i></a>
+        <a href="#" class="hover:text-white mx-5 h-min"><i data-feather="instagram"></i></a>
+        <a href="#" class="hover:text-white mx-5 h-min"><i data-feather="youtube"></i></a>
     </div>
 
     <p class="uppercase font-bold">Copyright &copy; 2020. <span class="inline-block">All Rights Reserved.</span></p>
