Fixed error in sidebar

--- a/templates/shared/sidebar.html.twig
+++ b/templates/shared/sidebar.html.twig
@@ -9,7 +9,7 @@
             <img src="{{ asset('avatar/avatar.png') }}" alt="avatar" class="w-36 h-36 rounded-full bg-[#a0a0a0]">
             <h3 class="absolute right-5 w-56 md:w-72 text-3xl mb-5 uppercase flex flex-col text-right mix-blend-difference">
                 <span class="text-sm">Lorem Ipsum</span>
-                <span class="text-white font-bold">{{ app.user.name }}</span>
+                <span class="text-white font-bold">Lorem Ipsilus</span>
             </h3>
         </div>
     </section>
