--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -8,7 +8,7 @@
         'subtitle': 'How to find me',
     } only %}
 
-    <main class="max-w-5xl m-auto px-4 my-8
+    <main class="max-w-5xl m-auto px-4 my-8 w-full
             md:flex md:flex-row">
         <div class="mb-16 mr-8 md:w-1/2">
             <h3 class="hidden md:block text-3xl mb-5 w-full uppercase">
