--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,38 +3,48 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <form method="post">
+    {% include 'shared/title.html.twig' with {
+        'title': 'Login',
+        'subtitle': 'Sign in to your account'
+    } only %}
+
+    <main class="max-w-md m-auto px-4 my-8 w-full">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+        <section class="mt-8">
+            {{ form_start(form) }}
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+            <div>
+                {{ form_errors(form.email) }}
+                {{ form_widget(form.email) }}
+                {{ form_help(form.email) }}
             </div>
-        {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail">Email</label>
-        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-        <label for="inputPassword">Password</label>
-        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+            <div>
+                {{ form_errors(form.password) }}
+                {{ form_widget(form.password) }}
+                {{ form_help(form.password) }}
+            </div>
 
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+            {#
+            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html
 
-        {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Remember me
+                </label>
+            </div>
+            #}
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-        #}
+            <div class="flex justify-center lg:justify-end">
+                {{ form_widget(form.submit) }}
+            </div>
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
-    </form>
+            {{ form_end(form, {render_rest: false}) }}
+        </section>
+    </main>
 {% endblock %}
