Added settings to menu

--- a/templates/shared/sidebar.html.twig
+++ b/templates/shared/sidebar.html.twig
@@ -32,6 +32,10 @@
 
             {{ sidebar.route('Dashboard', path('app_admin')) }}
             {{ sidebar.route('Upload image', '#') }}
+            {{ sidebar.route('Settings', '#') }}
+
+            <hr class="border-neutral-500">
+
             {{ sidebar.route('Logout', path('app_logout')) }}
         {% endif %}
     </nav>
