Can now edit socials

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -61,3 +61,40 @@ form button {
 form button:hover {
     border-color: #FFFFFF;
 }
+
+form .checkbox {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+form .checkbox span {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+}
+
+form .checkbox span:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+}
+
+form .checkbox input:checked + span {
+    background-color: #2196F3;
+}
+
+form .checkbox input:checked + span:before {
+    transform: translateX(26px);
+}
