--- a/templates/shared/header.html.twig
+++ b/templates/shared/header.html.twig
@@ -1,5 +1,5 @@
 <header>
-    <a href="#" class="absolute top-3 left-4">
+    <a href="{{ path('app_home') }}" class="absolute top-3 left-4">
         <img src="{{ asset('image/logo.png') }}" class="h-10 md:h-28" alt="Logo">
     </a>
 
