--- a/templates/shared/sidebar.html.twig
+++ b/templates/shared/sidebar.html.twig
@@ -32,7 +32,7 @@
 
             {{ sidebar.route('Dashboard', path('app_admin')) }}
             {{ sidebar.route('Upload image', '#') }}
-            {{ sidebar.route('Settings', '#') }}
+            {{ sidebar.route('Settings', path('app_settings')) }}
 
             <hr class="border-neutral-500">
 
