--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -38,9 +38,9 @@
             </div>
 
             <div>
-                {{ form_errors(form.content) }}
-                {{ form_widget(form.content) }}
-                {{ form_help(form.content) }}
+                {{ form_errors(form.contents) }}
+                {{ form_widget(form.contents) }}
+                {{ form_help(form.contents) }}
             </div>
 
             <div class="flex justify-center lg:justify-end">
