Can now toggle albums

--- a/templates/home/tags.html.twig
+++ b/templates/home/tags.html.twig
@@ -1,4 +1,4 @@
-<section id="tags" class="flex flex-nowrap overflow-x-auto scrollbar-none px-2 h-64 items-center">
+<section id="tags" class="flex flex-nowrap overflow-x-auto scrollbar-none px-2 h-64 items-center mb-16">
     <div class="flex items-center">
         <i data-feather="chevron-left"></i>
     </div>
