--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,11 +14,13 @@
     } only %}
 
     <main class="my-8 md:mt-0">
-        {% include 'home/tags.html.twig' with {
-            'tags': tags
-        } only %}
+        {% if settings.displayAlbums == true %}
+            {% include 'home/tags.html.twig' with {
+                'tags': tags
+            } only %}
+        {% endif %}
 
-        <section class="px-5 mt-16 grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-8">
+        <section class="px-5 grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-8">
             {# TODO: Implement lazy loaded images #}
             {% for image in images %}
                 <div class="rounded shadow-md shadow-black {% if image.large %}md:col-span-2 md:row-span-2{% endif %}">
