--- a/templates/settings/index.html.twig
+++ b/templates/settings/index.html.twig
@@ -34,11 +34,24 @@
                 </section>
             {% endfor %}
 
-            <hr class="border-neutral-500">
+            <hr class="border-neutral-500 my-5">
 
             {{ form_label(form.appName) }}
             {{ form_widget(form.appName) }}
             {{ form_help(form.appName) }}
+
+            <hr class="border-neutral-500 my-5">
+
+            <div>
+                {{ form_label(form.displayAlbums) }} <br>
+                <label class="checkbox">
+                    {{ form_widget(form.displayAlbums) }}
+                    <span></span>
+                </label>
+                {{ form_help(form.displayAlbums) }}
+            </div>
+
+            <hr class="border-neutral-500 my-5">
 
             <div>
                 {{ form_widget(form.submit) }}
@@ -46,10 +59,8 @@
 
             {{ form_end(form, {render_rest: false}) }}
         </div>
-        <hr class="border-neutral-500">
 
         <ul class="list-disc list-inside">
-            <li>Copyright (?)</li>
             <li>Profile</li>
             <ul class="list-disc list-inside pl-5">
                 <li>name</li>
@@ -57,9 +68,7 @@
                 <li>about me</li>
                 <li>avatar</li>
             </ul>
-            <li>albums on/off</li>
             <li>restore scroll position button on/off</li>
-            <li>site name</li>
             <li>logo</li>
         </ul>
     </main>
