--- a/templates/settings/index.html.twig
+++ b/templates/settings/index.html.twig
@@ -61,6 +61,8 @@
         </div>
 
         <ul class="list-disc list-inside">
+            <li><a href="https://github.com/fengyuanchen/cropperjs" target="_blank" class="text-blue-900 hover:underline">CropperJS</a></li>
+            <li><a href="https://www.plupload.com/" target="_blank" class="text-blue-900 hover:underline">Plupload</a></li>
             <li>Profile</li>
             <ul class="list-disc list-inside pl-5">
                 <li>name</li>
