--- a/templates/shared/footer.html.twig
+++ b/templates/shared/footer.html.twig
@@ -9,5 +9,5 @@
         {% endfor %}
     </div>
 
-    <p class="uppercase font-bold mr-5">&copy;2022 ArchBacon</p>
+    <p class="uppercase font-bold mr-5">&copy;2022 Christian Delicaat</p>
 </footer>
