Fixed small bugs

--- a/templates/shared/sidebar.html.twig
+++ b/templates/shared/sidebar.html.twig
@@ -31,7 +31,7 @@
             <hr class="border-neutral-500">
 
             {{ sidebar.route('Dashboard', path('admin_dashboard')) }}
-            {{ sidebar.route('Upload image', path('admin_upload')) }}
+            {{ sidebar.route('Upload image', '#') }}
             {{ sidebar.route('Profile', '#') }}
             {{ sidebar.route('Settings', path('admin_settings')) }}
 
