--- a/templates/admin/admin_base.html.twig
+++ b/templates/admin/admin_base.html.twig
@@ -16,7 +16,7 @@
 
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
-        <script src="{{ asset('feather.min.js') }}"></script>
+        <script src="{{ asset('js/feather.min.js') }}"></script>
     {% endblock %}
 </head>
 <body class="bg-black font-montserrat text-neutral-400 flex flex-col relative min-h-screen pb-28 overflow-y-auto
