--- a/templates/admin/admin_base.html.twig
+++ b/templates/admin/admin_base.html.twig
@@ -15,7 +15,7 @@
     {% endblock %}
 
     {% block javascripts %}
-        {{ encore_entry_script_tags('app') }}
+        {# {{ encore_entry_script_tags('app') }} #}
         <script src="{{ asset('js/feather.min.js') }}"></script>
     {% endblock %}
 </head>
