--- a/templates/admin/settings/index.html.twig
+++ b/templates/admin/settings/index.html.twig
@@ -35,16 +35,16 @@
             {{ form_widget(form.appName) }}
             {{ form_help(form.appName) }}
 
-            <hr class="border-neutral-500 my-5">
+{#            <hr class="border-neutral-500 my-5">#}
 
-            <div>
-                {{ form_label(form.displayAlbums) }} <br>
-                <label class="checkbox">
-                    {{ form_widget(form.displayAlbums) }}
-                    <span></span>
-                </label>
-                {{ form_help(form.displayAlbums) }}
-            </div>
+{#            <div>#}
+{#                {{ form_label(form.displayAlbums) }} <br>#}
+{#                <label class="checkbox">#}
+{#                    {{ form_widget(form.displayAlbums) }}#}
+{#                    <span></span>#}
+{#                </label>#}
+{#                {{ form_help(form.displayAlbums) }}#}
+{#            </div>#}
 
             <hr class="border-neutral-500 my-5">
 
@@ -57,7 +57,6 @@
 
         <ul class="list-disc list-inside">
             <li><a href="https://github.com/fengyuanchen/cropperjs" target="_blank" class="text-blue-900 hover:underline">CropperJS</a></li>
-            <li><a href="https://www.plupload.com/" target="_blank" class="text-blue-900 hover:underline">Plupload</a></li>
             <li>Profile</li>
             <ul class="list-disc list-inside pl-5">
                 <li>name</li>
