Fixed uploads not working

--- a/templates/admin/upload/index.html.twig
+++ b/templates/admin/upload/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/admin_base.html.twig' %}
 
-{% block title %}Hello UploadController!{% endblock %}
+{% block title %}Upload{% endblock %}
 
 {% block body %}
     <script src="{{ asset('js/plupload.full.min.js') }}"></script>
