--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin/admin_base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block body %}{% endblock %}
