--- a/templates/admin/admin_base.html.twig
+++ b/templates/admin/admin_base.html.twig
@@ -21,7 +21,7 @@
         <script src="{{ asset('js/feather.min.js') }}"></script>
     {% endblock %}
 </head>
-<body class="flex flex-col relative min-h-screen bg-zinc-900 text-neutral-300">
+<body class="flex flex-col relative min-h-screen bg-zinc-900 text-neutral-300 font-montserrat">
     <div class="flex flex-col">
         <div class="z-50 flex h-[72px] min-w-full flex-row items-center px-4"></div>
     </div>
@@ -49,6 +49,10 @@
             </div>
         </div>
     </div>
+
+    <script>
+        feather.replace()
+    </script>
 </body>
 </html>
 
